# xf-ai-agent

./: .env  .env.example  .gitignore  AGENTS.md  AGENT_ARCHITECTURE_AND_WORKFLOW.md  API文档.md  README.en.md  README.md  XF-AI-Agent系统说明文档.md  YUNYOU_AGENT_WORKFLOW.md  alembic.ini  api.md  database_init.sql  main.py  migrate_to_pgsql.py  mysql.sql  pyproject.toml  pyrightconfig.json  requirements.txt  test_regex.py  test_regex_final.py  完整项目说明文档.md  技术细节补充文档.md  项目学习文档.md  项目文档.md  项目说明与学习文档.md  项目说明文档.md
alembic/: env.py
alembic/versions/: 20260308_01_create_t_interrupt_approval.py  aab1c2ea9450_add_user_skill_and_update_mcp.py
app/: main.py
app/agent/: agent.py  agent_builder.py  base.py  graph_runner.py  graph_runner_commented.py  graph_runner_core.py  graph_runner_events.py  graph_state.py  registry.py  xf_graph.py
app/agent/agents/: code_agent.py  medical_agent.py  search_agent.py  sql_agent.py  weather_agent.py  yunyou_agent.py
app/agent/gateway/: federated_query_gateway.py
app/agent/graphs/: checkpointer.py  planner.py  state.py  supervisor.py  supervisor_rule_support.py  supervisor_support.py
app/agent/llm/: loader_llm_multi.py  model_config.py  ollama_model.py  (+1 more)
app/api/: deps.py
app/common/: __init__.py
app/config/: keyword_settings.py  rules.yaml  runtime_settings.py  test.py
app/constants/: __init__.py  agent_messages.py  agent_registry_keywords.py  approval_constants.py  chat_service_constants.py  code_agent_keywords.py  date_parse_keywords.py  runtime_hook_keywords.py  search_keywords.py  session_state_constants.py  sql_agent_constants.py  sql_agent_keywords.py  sql_policy_constants.py  sql_tool_constants.py  sse_constants.py  supervisor_keywords.py  weather_tool_constants.py  workflow_constants.py  yunyou_keywords.py
app/core/: logger.py  middleware.py  security.py
app/db/: __init__.py  base_crud.py  crud.py  model_setting_db.py  user_info_db.py  user_model_db.py
app/enums/: agent_enum.py
app/exceptions/: business_exception.py
app/harness/: contracts.py  graph_runner.py  graph_runner_core.py  graph_runner_events.py  types.py
app/llm/: loader_llm_multi.py
app/logs/: error.log.2026-04-01  info.log.2026-04-01
app/models/: __init__.py  chat_history.py  interrupt_approval.py  model_setting.py  schemas.py  session_state.py  user_info.py  user_mcp.py  user_model.py  user_skill.py
app/planner/: planner.py  task_builder.py
app/prompts/: prompt_loader.py
app/runtime/: __init__.py  contracts.py  modes.py  types.py
app/schemas/: base.py  base_skill.py  chat_history_schemas.py  chat_schemas.py  graph_state.py  http_client_schemas.py  interrupt_schemas.py  model_setting_schemas.py  response_model.py  schemas.py  session_state_schemas.py  supervisor_schemas.py  terminal_schemas.py  user_info_schemas.py  user_mcp_schemas.py  user_model_schemas.py
app/services/: agent_stream_bus.py  base_service.py  chat_history_service.py  chat_service.py  chat_stream_support.py  exception_service.py  interrupt_service.py  model_setting_service.py  request_cancellation_service.py  retriever.py  route_metrics_service.py  runtime_skill_service.py  runtime_user_config_service.py  semantic_cache_service.py  session_pool.py  session_state_service.py  tools.py  user_info_service.py  user_mcp_service.py  user_model_service.py  user_skill_service.py  vector_store.py  xf_graph.py
app/supervisor/: base.py  checkpointer.py  graph_runner_commented.py  graph_state.py  registry.py  state.py  supervisor.py  supervisor_rule_support.py  supervisor_support.py
app/templates/: chat.html  index.html
app/test/: skill.py  ttt.py  zhipu.py
app/tools/: search_tools.py
app/utils/: callback_handler.py  chat_utils.py  code_tools.py  config.py  custom_logger.py  date_utils.py  decorators.py  file_utils.py  history_compressor.py  jwt_test.py  langgraph_redis_saver.py  location_parser.py  pwd_utils.py  redis_manager.py  sse_logging_handler.py
app/xf_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: knowledge.txt
docs/: 00_代码级学习路径.md  00_学习指南.md  00_文档索引.md  00_项目目录与文件说明.md  01_项目总览.md  02_系统架构.md  03_Harness运行时.md  04_多Agent编排.md  05_执行与审批链路.md  06_前端流程卷轴与页面终端.md  07_数据库与会话状态.md  08_API接口说明.md  09_测试与回归.md  10_开发规范与中文注释规范.md  Alembic迁移指南.md  PostgreSQL全量文档.md  PostgreSQL持久化设计与运维文档.md  PostgreSQL数据库完整技术文档.md  database_init.sql  后端函数方法与包说明表.md  后端项目说明文档.md
docs/optimizations/: 2026-03-19_async_streaming_refactor.md  README.md
docs/regression/: latest_regression_report.json  latest_regression_report.md  perf_acceptance_latest.json  perf_acceptance_latest.md
docs/sql/: 20260308_create_t_interrupt_approval.sql
logs/: error.log.2026-03-19  error.log.2026-03-20  error.log.2026-03-21  error.log.2026-03-22  error.log.2026-03-23  error.log.2026-03-24  error.log.2026-03-25  error.log.2026-03-26  info.log.2026-03-19  info.log.2026-03-20  info.log.2026-03-21  info.log.2026-03-22  info.log.2026-03-23  info.log.2026-03-24  info.log.2026-03-25  info.log.2026-03-26
mcp/yunyou/: yunyou_log_mcp.py
scripts/regression/: run_full_regression.py  run_performance_acceptance.py
skills/: demo.md
skills/yunyou/: SKILL_holter.md
tests/: test_chat_stream_stability.py  test_graph_runner_cache.py  test_performance_optimizations.py  test_run_state_store.py  test_runtime_contracts.py  test_runtime_harness_layers.py  test_supervisor_multitask_split.py  test_supervisor_parallel_aggregation.py  test_supervisor_state_machine.py  test_timeout_handling.py  test_yunyou_resilience.py
tmp/: test_api_chat.py  test_rule_engine.py  test_yunyou_agent.py
tmp/doc_inventory/: builtins_summary.json  functions.json  imports_summary.json
vectorstore/: index.faiss
(+561 files in other folders)
