[project]
name = "xf-ai-agent"
version = "0.1.0"
description = "基于 LangChain、LangGraph 和 FastAPI 构建的智能代理后端项目"
authors = [
    { name = "lxf", email = "lxf@qq.com" }
]
dependencies = [
    "fastapi~=0.116.0",
    "uvicorn[standard]~=0.35.0",
    # LangChain 相关包
    "langchain==0.3.27", # 您的指定版本
    "langchain-openai==0.3.28", # 最新稳定版本，与 LangChain 0.3.x 兼容
    "langchain-zhipuai==0.0.1",
    "langchain-community==0.3.27", # 最新稳定版本，与 LangChain 0.3.x 兼容
    "langchain-ollama==0.3.6",
    "langgraph==0.6.2", # 最新稳定版本，与 LangChain 0.3.x 兼容
    "langchain-google-genai==2.1.8", # 最新稳定版本，与 LangChain 0.3.x 兼容
    # 环境变量加载
    "python-dotenv==1.1.0",
    # Tavily 搜索客户端
    "tavily-python==0.7.3",
    # 文档处理相关
    # "unstructured[all-docs]==0.17.2",
    # "weasyprint==65.1",
    # "mammoth==1.9.0",
    # "openpyxl==3.1.5",
    # "marker-pdf==1.7.3",
    # "python-magic==0.4.27",
    "pypdf==3.10.0",
    # Streamlit 相关
    # "streamlit==1.45.1",
    # "streamlit-chat==0.1.1",
    # "streamlit-extras==0.7.1",
    # MCP 相关
    "langchain-mcp-adapters==0.1.9",
    "mcp==1.12.1",
    # 网络请求
    "httpx==0.28.1",
    # 向量数据库相关
    "faiss-cpu==1.11.0.post1",
    # "faiss-gpu==1.7.4",
    # Mysql相关
    "pymysql>=1.1.1",
    # 密码加密
    "passlib[bcrypt]>=1.7.4",
    # token加密
    "pyjwt>=2.10.1",
    # 模板引擎
    "jinja2>=3.1.6",
    # MongoDB 相关
    "pymongo>=4.14.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
# uv 特定的配置，例如：
# resolver = "pip" # 可以指定解析器

[tool.setuptools.packages.find]
where = ["app"]
